# ball-game

./: README.md  package-lock.json
client/: package-lock.json  package.json
client/public/: env.js
client/src/: App.tsx  style.css
client/src/components/: Button.tsx  Piece.tsx
server/: .env.example  .gitignore  app.py  config.py  data.json  database.db  main_routes.py  pyproject.toml  readme.md
server/routes/: __init__.py
